# worklog

./: .env.example  .gitignore  README.md  app_main.py  build_exe.bat  config.example.yaml  pyproject.toml
releases/: README.md
tests/: test_analyze.py  test_claude_logs.py  test_codex_logs.py  test_compose.py  test_git.py  test_naverworks.py  test_qa_sessions.py  test_render_and_notion.py  test_review_fixes.py  test_review_fixes_v2.py  test_server.py  test_settings.py  test_summarize.py  test_update.py
worklog/: __init__.py  __main__.py  analyze.py  cli.py  config.py  models.py  render.py  service.py  summarize.py  update.py  util.py
worklog/collectors/: __init__.py  activitywatch.py  base.py  claude_logs.py  codex_logs.py  git_repos.py  naverworks.py
worklog/outputs/: __init__.py  base.py  markdown.py  notion.py  obsidian.py
worklog/templates/: config.example.yaml
worklog/webapp/: __init__.py  launcher.py  server.py
worklog/webapp/static/: index.html
